@@ -1,3 +1,8 @@
+2013-01-01  Joel Brobecker  <brobecker@adacore.com>
+
+	* gdbreplay.c (gdbreplay_version): Update copyright year.
+	* server.c (gdbserver_version): Likewise.
+
 2012-12-17  Joel Brobecker  <brobecker@adacore.com>
 
 	* lynx-low.c (lynx_wait_1): Add debug trace before adding
